collision check works but still needs some postioning work - fire jumps after animation stops

--- a/css/main.css
+++ b/css/main.css
@@ -135,7 +135,7 @@ h1{
 .fire{
 	position: absolute;
 	z-index: 3;
-	top: 663px;
+	top: 750px;
 }
 
 .hide{
